# NetDoctor

./: .gitignore  .pre-commit-config.yaml  .~lock.Python2_Guide.docx#  CHANGELOG.md  LICENSE  MANUAL_TESTING.md  Makefile  README.md  netdoctor_spec.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
Assets/: .~lock.netdoctor_guide.docx#
netdoctor/: __init__.py  config.py  main.py
netdoctor/core/: __init__.py  dns.py  ping.py  portscanner.py  report.py  systeminfo.py  traceroute.py  utils.py  whois.py
netdoctor/gui/: __init__.py  main_window.py
netdoctor/gui/styles/: DESIGN_DECISIONS.md  PALETTE_README.md  README.md  __init__.py  blue_dark.qss  palette.py  style.qss
netdoctor/gui/views/: __init__.py  dashboard_view.py  ping_view.py  portscan_view.py  reports_view.py  settings_view.py  system_view.py
netdoctor/gui/widgets/: README.md  __init__.py  animated_button.py  animations.py  button_helpers.py  cards.py  examples.py  progress_dialog.py  results_table.py  sidebar.py  ui_components.py
netdoctor/storage/: __init__.py  history.py
netdoctor/workers/: __init__.py  task_worker.py
tests/: __init__.py  test_dns.py  test_gui_views.py  test_history_export.py  test_ping.py  test_portscanner.py  test_systeminfo.py  test_utils.py  test_whois.py  test_worker.py
