[tool.poetry]
name = "netdoctor"
version = "0.1.0"
description = "System & Network Diagnostic Toolkit"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
PySide6 = "^6.5"
psutil = "^5.9"
pyqtgraph = "^0.13"
dnspython = "^2.2"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-qt = "^4.2"
black = "^23.9"
ruff = "^0.9"
mypy = "^1.5"
pre-commit = "^3.4"
pyinstaller = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

